# cfs-research

./: .gitmodules  CONTRIBUTING.md  README.md  setvars.sh
apps/blinker_app/: CHANGELOG.md  CMakeLists.txt  README.md  SECURITY.md  arch_build.cmake  mission_build.cmake
apps/blinker_app/.github/workflows/: codeql-build.yml
apps/blinker_app/config/: default_blinker_app_fcncodes.h  default_blinker_app_interface_cfg.h  default_blinker_app_internal_cfg.h  default_blinker_app_mission_cfg.h  default_blinker_app_msg.h  default_blinker_app_msgdefs.h  default_blinker_app_msgids.h  default_blinker_app_msgstruct.h  default_blinker_app_perfids.h  default_blinker_app_platform_cfg.h  default_blinker_app_tbl.h  default_blinker_app_tbldefs.h  default_blinker_app_tblstruct.h  default_blinker_app_topicids.h
apps/blinker_app/eds/: blinker_app.xml
apps/blinker_app/fsw/inc/: blinker_app_eventids.h
apps/blinker_app/fsw/src/: blinker_app.c  blinker_app.h  blinker_app_cmds.c  blinker_app_cmds.h  blinker_app_dispatch.c  blinker_app_dispatch.h  blinker_app_eds_dispatch.c  blinker_app_utils.c  blinker_app_utils.h  blinker_app_version.h
apps/blinker_app/fsw/tables/: blinker_app_tbl.c
apps/blinker_app/unit-test/: CMakeLists.txt
apps/blinker_app/unit-test/common/: eventcheck.c  eventcheck.h  setup.c  setup.h
apps/blinker_app/unit-test/coveragetest/: blinker_app_coveragetest_common.h  coveragetest_blinker_app.c  coveragetest_blinker_app_cmds.c  coveragetest_blinker_app_dispatch.c  coveragetest_blinker_app_eds_dispatch.c  coveragetest_blinker_app_utils.c
apps/blinker_app/unit-test/stubs/: blinker_app_cmds_stubs.c  blinker_app_dispatch_stubs.c  blinker_app_global_stubs.c  blinker_app_stubs.c  blinker_app_utils_stubs.c
apps/tst_csmr/: CMakeLists.txt  README.md  SECURITY.md
apps/tst_csmr/.github/: pull_request_template.md
apps/tst_csmr/.github/workflows/: codeql-build.yml
apps/tst_csmr/fsw/mission_inc/: tst_csmr_app_perfids.h
apps/tst_csmr/fsw/platform_inc/: tst_csmr_app_msgids.h  tst_csmr_app_table.h
apps/tst_csmr/fsw/src/: tst_csmr_app.c  tst_csmr_app.h  tst_csmr_app_events.h  tst_csmr_app_msg.h  tst_csmr_app_version.h
apps/tst_csmr/fsw/tables/: tst_csmr_app_tbl.c
apps/tst_csmr/unit-test/: CMakeLists.txt
apps/tst_prod/: .cookiecutterrc  CMakeLists.txt  README.md  SECURITY.md
apps/tst_prod/unit-test/: CMakeLists.txt
(+27 files in other folders)
